<resources>



    <string name="action_settings">Settings</string>

        <string name="hello">Hello World, MyApp!</string>
        <string name="app_name">DietChart</string>
        <string name="title">Diet Chart Details</string>
        <string name="day_name">Day Name: </string>
        <string name="breakfast">Breakfast: </string>
        <string name="lunch">Lunch: </string>
        <string name="dinner">Dinner: </string>
        <string name="add">Add</string>
        <string name="delete">Delete</string>
        <string name="modify">Modify</string>
        <string name="view">View</string>
        <string name="view_all">View All</string>
        <string name="show_info">Show Information</string>


</resources>
