<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/myLayout"
    android:stretchColumns="0"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"

    android:background="#996633">

    <TextView android:text="@string/title"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textColor="#FFFFFF"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <EditText android:id="@+id/editday_name"
        android:inputType="text"
        android:hint="Enter Day Name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textColorHint="#FFFFFF"
        android:textColor="#FFFFFF"/>

    <EditText android:id="@+id/editbreakfast"
        android:inputType="text"
        android:hint="Enter Breakfast"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textColorHint="#FFFFFF"
        android:textColor="#FFFFFF"/>

    <EditText android:id="@+id/editlunch"
        android:inputType="text"
        android:hint="Enter lunch"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textColorHint="#FFFFFF"
        android:textColor="#FFFFFF"/>
        <EditText android:id="@+id/editdINNER"
            android:inputType="text"
            android:hint="Enter Dinner"
            android:textColorHint="#FFFFFF"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textColor="#FFFFFF"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="60dp">
    <Button	  android:id="@+id/btnAdd"
        android:text="@string/add"

        android:layout_width="100dp"
        android:layout_height="40dp"/>
    <Button	  android:id="@+id/btnDelete"
        android:text="@string/delete"
        android:textColor="#484848"
        android:layout_width="100dp"
        android:layout_height="40dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:layout_marginLeft="60dp">
    <Button   android:id="@+id/btnModify"
        android:text="@string/modify"
        android:layout_x="30dp"
        android:layout_y="250dp"
        android:layout_width="100dp"
        android:layout_height="40dp"/>
    <Button   android:id="@+id/btnView"
        android:text="@string/view"
        android:layout_x="150dp"
        android:layout_y="250dp"
        android:layout_width="100dp"
        android:layout_height="40dp"/></LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:layout_marginLeft="60dp">
    <Button   android:id="@+id/btnViewAll"
        android:text="@string/view_all"
        android:layout_x="30dp"
        android:layout_y="300dp"
        android:layout_width="100dp"
        android:layout_height="40dp"/>
    <Button   android:id="@+id/btnShowInfo"
        android:text="@string/show_info"
        android:layout_x="150dp"
        android:layout_y="300dp"
        android:layout_width="100dp"
        android:layout_height="40dp"/>
        </LinearLayout>
</LinearLayout>